--- a/Portfolio-Website/assets/css/style.css
+++ b/Portfolio-Website/assets/css/style.css
@@ -101,6 +101,7 @@ h6 { font-size: 2rem; font-family: Georgia, 'Times New Roman', Times, serif; }
    --orange-900: #332106;
 }
 
+.header-green { color: var(--green-400) }
 .header-orange { color: var(--orange-600); }
 .header-white { color: white; }
 .highlight-orange { color: var(--orange-400); }
@@ -225,13 +226,30 @@ header {
     padding: var(--row-2) 0;
 }
 
-.cta {
+/* ==================== ABOUT-CTA ==================== */
+
+.about-cta {
     display: block;
     background-color: var(--green-100);
     color: var(--gray-900);
 }
 
-.cta-container {
+.about-container {
+    max-width: var(--breakpoint-tablet);
+    margin: 0 auto;
+    padding: var(--col-3) var(--col-padding) var(--col-8) var(--col-padding);
+
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: var(--col-1);
+}
+
+.about-cta img {
+    width: var(--col-8);
+    height: auto;
+}
+
+.zzabout-container {
     max-width: var(--breakpoint-tablet);
     margin: 0 auto;
     padding: var(--col-3) var(--col-padding) var(--col-8) var(--col-padding);
@@ -243,14 +261,14 @@ header {
     text-align: center;
 }
 
-.cta-button {
+.zzcta-button {
     border-color: var(--green-500);
     background-color: var(--green-200);
     color: var(--green-900);
     box-shadow: 0px 6px 32px -10px var(--green-300);
 }
 
-.cta-button:hover {
+.zzcta-button:hover {
     background-color: var(--green-900);
     color: var(--green-100);
 }
