--- a/Portfolio-Website/assets/css/style.css
+++ b/Portfolio-Website/assets/css/style.css
@@ -240,8 +240,9 @@ header {
     padding: var(--col-3) var(--col-padding) var(--col-8) var(--col-padding);
 
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: var(--col-1);
+    grid-template-columns: auto 1fr;
+    column-gap: var(--col-3);
+    align-items: center;
 }
 
 .about-cta img {
@@ -249,26 +250,23 @@ header {
     height: auto;
 }
 
-.zzabout-container {
-    max-width: var(--breakpoint-tablet);
-    margin: 0 auto;
-    padding: var(--col-3) var(--col-padding) var(--col-8) var(--col-padding);
-
+.about {
     display: flex;
     flex-direction: column;
-    row-gap: var(--row-2);
-    align-items: center;
-    text-align: center;
+    row-gap: var(--row-1);
+    align-items: flex-start; /* ensures children width matches content width--NOT FULL WIDTH */
 }
 
-.zzcta-button {
+.about h6 { margin-top: -24px; }
+
+.about-cta-button {
     border-color: var(--green-500);
     background-color: var(--green-200);
     color: var(--green-900);
     box-shadow: 0px 6px 32px -10px var(--green-300);
 }
 
-.zzcta-button:hover {
+.about-cta-button:hover {
     background-color: var(--green-900);
     color: var(--green-100);
 }
