--- a/Portfolio-Website/assets/css/style.css
+++ b/Portfolio-Website/assets/css/style.css
@@ -116,13 +116,20 @@ a { cursor: pointer; }
 .header-green { color: var(--green-400) }
 .header-orange { color: var(--orange-600); }
 .header-white { color: white; }
-.highlight-orange { color: var(--orange-400); }
 
-.text-green {
+.bold-green {
     font-weight: 600;
     text-decoration: underline;
     color: var(--green-500)
 }
+
+.underline-orange {
+    box-shadow: inset 0 var(--backup-row-0) var(--orange-600);
+    font-weight: 600;
+}
+
+.highlight-orange { color: var(--orange-400); }
+
 
 /* ==================== COMPONENTS ==================== */
 
@@ -208,9 +215,7 @@ header {
     color: var(--green-400);
 }
 
-.nav-menu > .nav-item:nth-child(5) img {
-    background-color: var(--green-400);
-}
+.nav-menu > .nav-item:nth-child(5) img { background-color: var(--green-400); }
 
 .nav-menu > .nav-item:last-child img {
     width: var(--gutter-col-3);
@@ -281,7 +286,7 @@ header {
 .problems-section ul li {
     margin-bottom: var(--gutter-row-padding);
     padding-left: 36px;
-    background-image: url("../images/problems-star.png");
+    background-image: url("../images/problems-star-orange.png");
     background-size: var(--gutter-row-2) var(--gutter-row-2);
     background-position: left center;
     background-repeat: no-repeat;
@@ -388,6 +393,8 @@ header {
 
 .benefits-2-item div { padding-bottom: var(--gutter-row-3); }
 
+.benefits-2-item .benefits-title { font-weight: 600; }
+
 /* ==================== FOOTER ==================== */
 
 footer {
@@ -413,7 +420,7 @@ footer {
     width: var(--gutter-col-4);
     height: var(--gutter-col-4);
     position: relative;
-    background-color: var(--gray-100);
+    background-color: var(--gray-400);
     justify-self: center;
 }
 
@@ -440,7 +447,7 @@ footer {
 .footer-3 img {
     width: var(--gutter-col-2);
     height: var(--gutter-col-2);   
-    background-color: var(--gray-100); 
+    background-color: var(--gray-400); 
 }
 
 .footer-3 img:hover { background-color: var(--green-400); }
