--- a/Portfolio-Website/assets/css/style.css
+++ b/Portfolio-Website/assets/css/style.css
@@ -125,13 +125,14 @@ a { cursor: pointer; }
     color: var(--green-500)
 }
 
+.bold-normal { font-weight: 600; }
+
 .underline-orange {
-    box-shadow: inset 0 var(--backup-row-0) var(--orange-600);
+    box-shadow: inset 0 -6px var(--orange-600);
     font-weight: 600;
 }
 
 .highlight-orange { color: var(--orange-400); }
-
 
 /* ==================== COMPONENTS ==================== */
 
@@ -409,7 +410,7 @@ header {
 
 .benefits-2-item div { padding-bottom: var(--gutter-row-3); }
 
-.benefits-2-item .benefits-title { font-weight: 600; }
+.benefits-2-item .benefits-info h6 { padding-top: var(--gutter-row-1);  }
 
 /* ==================== MAIN ==================== */
 
@@ -449,6 +450,8 @@ main {
     width: 100%;
     height: var(--image-col-3);
     padding: 0 var(--gutter-col-1);
+    background-color: var(--gray-900);
+    color: var(--gray-100);
 
     display: flex;
     flex-direction: column;
